--- a/availability.html
+++ b/availability.html
@@ -72,14 +72,22 @@
       background: white;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+
+      /* new: limit height and scroll */
+      max-height: 75vh;
+      overflow-y: auto;
     }
     #dateInfo {
       flex: 1;
-      background: #ffffff;
+      background: #fff;
       padding: 15px;
       border-radius: 10px;
-      box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
+      box-shadow: 0 0 8px rgba(0,0,0,0.08);
+
+      /* new: limit height and scroll */
+      max-height: 75vh;
+      overflow-y: auto;
     }
     .available-box {
       padding: 10px;
