--- a/mastercalendar.html
+++ b/mastercalendar.html
@@ -71,10 +71,15 @@
     }
 
     #calendar {
+      flex: 2;
       background: white;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+
+      /* new: limit height and scroll */
+      max-height: 75vh;
+      overflow-y: auto;
     }
 
     .fc .fc-daygrid-day-frame {
@@ -84,11 +89,15 @@
     }
 
     #dateInfo {
-      margin-top: 10px;
-      background: #ffffff;
+      flex: 1;
+      background: #fff;
       padding: 15px;
       border-radius: 10px;
-      box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
+      box-shadow: 0 0 8px rgba(0,0,0,0.08);
+
+      /* new: limit height and scroll */
+      max-height: 75vh;
+      overflow-y: auto;
     }
 
     .booking-box {
