--- a/mastercalendar.html
+++ b/mastercalendar.html
@@ -67,7 +67,9 @@
     }
 
     #rightPanel {
-      flex: 1;
+      display: flex;
+      gap: 20px;             
+      align-items: flex-start; 
     }
 
     #calendar {
