--- a/fleetmaster.html
+++ b/fleetmaster.html
@@ -82,16 +82,21 @@
   <header>
   <div>YFNED Fleetmaster Controls</div>
   <div>
-    <button id="master-btn" class="nav-btn"
-            onclick="location.href='mastercalendar.html'">
+    <button class="header-btn" onclick="location.href='fleetmaster.html'">
+      Fleetmaster View
+    </button>
+    <button class="header-btn" onclick="location.href='mastercalendar.html'">
       Master Calendar
     </button>
-    <button id="avail-btn" class="nav-btn"
-            onclick="location.href='availability.html'">
+    <button class="header-btn" onclick="location.href='availability.html'">
       Availability Calendar
     </button>
-    <button id="export-btn" class="nav-btn">Export Logs to Excel</button>
-    <button id="logout-btn" class="nav-btn">Logout</button>
+    <button class="header-btn" onclick="location.href='masterbooking.html'">
+      Master Booking
+    </button>
+    <button id="logout-btn" class="header-btn">
+      Logout
+    </button>
   </div>
 </header>
 
