--- a/masterbooking.html
+++ b/masterbooking.html
@@ -49,26 +49,26 @@
 </head>
 <body>
   <header>
-    <div>Master Booking Calendar</div>
-    <div>
-      <button class="header-btn"
-              onclick="location.href='fleetmaster.html'">
-        Fleetmaster View
-      </button>
-      <button class="header-btn"
-              onclick="location.href='mastercalendar.html'">
-        Master Calendar
-      </button>
-      <button class="header-btn"
-              onclick="location.href='availability.html'">
-        Availability Calendar
-      </button>
-      <button id="logout-btn" class="header-btn"
-              style="display:none;">
-        Logout
-      </button>
-    </div>
-  </header>
+  <div>YFNED Master Calendar</div>
+  <div>
+    <button class="header-btn" onclick="location.href='fleetmaster.html'">
+      Fleetmaster View
+    </button>
+    <button class="header-btn" onclick="location.href='mastercalendar.html'">
+      Master Calendar
+    </button>
+    <button class="header-btn" onclick="location.href='availability.html'">
+      Availability Calendar
+    </button>
+    <button class="header-btn" onclick="location.href='masterbooking.html'">
+      Master Booking
+    </button>
+    <button id="logout-btn" class="header-btn">
+      Logout
+    </button>
+  </div>
+</header>
+
 
 <div class="container">
   <h2>YFNED Master Booking</h2>
