--- a/availability.html
+++ b/availability.html
@@ -114,17 +114,26 @@
 <body>
 
   <header>
-    <div>YFNED Availability Calendar</div>
-    <div>
-      <button class="header-btn" onclick="location.href='fleetmaster.html'">
-        Fleetmaster View
-      </button>
-      <button class="header-btn" onclick="location.href='mastercalendar.html'">
-        Master Calendar
-      </button>
-      <button id="logout-btn" class="header-btn">Logout</button>
-    </div>
-  </header>
+  <div>YFNED Availability Calendar</div>
+  <div>
+    <button class="header-btn" onclick="location.href='fleetmaster.html'">
+      Fleetmaster View
+    </button>
+    <button class="header-btn" onclick="location.href='mastercalendar.html'">
+      Master Calendar
+    </button>
+    <button class="header-btn" onclick="location.href='availability.html'">
+      Availability Calendar
+    </button>
+    <button class="header-btn" onclick="location.href='masterbooking.html'">
+      Master Booking
+    </button>
+    <button id="logout-btn" class="header-btn">
+      Logout
+    </button>
+  </div>
+</header>
+
 
   <div id="container">
     <div id="legend"></div>
