--- a/availability.html
+++ b/availability.html
@@ -36,6 +36,10 @@
       cursor: pointer;
       margin-left: 1rem;
     }
+    .header-btn:hover {
+      background: #555;
+    }
+
     #container {
       display: flex;
       gap: 20px;
