--- a/fleetmaster.html
+++ b/fleetmaster.html
@@ -14,15 +14,6 @@
       margin: 0;
       padding: 0;
     }
-    .nav-btn {
-      background: #666;
-      color: white;
-      border: none;
-      padding: 0.5rem 1rem;
-      border-radius: 4px;
-      cursor: pointer;
-      margin-left: 1rem;
-    }
     header {
       background: #333;
       color: white;
@@ -31,6 +22,19 @@
       justify-content: space-between;
       align-items: center;
     }
+    .header-btn {
+      background: #666;
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 4px;
+      cursor: pointer;
+      margin-left: 1rem;
+    }
+.header-btn:hover {
+  background: #555;
+}
+
     #logout-btn, #export-btn {
       background: #666;
       color: white;
