--- a/masterbooking.html
+++ b/masterbooking.html
@@ -5,28 +5,21 @@
   <title>YFNED Master Booking</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- 1) jQuery -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- FullCalendar CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.9.0/main.min.css" rel="stylesheet" />
 
-  <!-- 2) Timepicker CSS & JS -->
+  <!-- Your global styles (including the sky‐blue feather background) -->
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- jQuery & Timepicker -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css"
   />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
 
-  <!-- 3) FullCalendar CSS & JS -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/fullcalendar@5.9.0/main.min.css"
-    rel="stylesheet"
-  />
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.9.0/main.min.js"></script>
-
-  <!-- 4) Your global styles (background, etc.) -->
-  <link rel="stylesheet" href="style.css" />
-
   <style>
-    /* page-specific overrides */
     header {
       background: #333;
       color: white;
@@ -44,7 +37,9 @@
       cursor: pointer;
       margin-left: 0.5rem;
     }
-    .header-btn:hover { background: #555; }
+    .header-btn:hover {
+      background: #555;
+    }
 
     .container {
       max-width: 1200px;
@@ -56,9 +51,12 @@
     }
 
     .calendar-and-details {
-      display: flex; gap: 1rem;
+      display: flex;
+      gap: 1rem;
     }
-    .calendar-section { flex: 1; }
+    .calendar-section {
+      flex: 1;
+    }
     .details-section {
       flex: 0 0 300px;
       border-left: 1px solid #ccc;
@@ -101,7 +99,9 @@
       cursor: pointer;
       max-width: 200px;
     }
-    .action-button:hover { background-color: #555; }
+    .action-button:hover {
+      background-color: #555;
+    }
 
     .delete-booking {
       margin-top: 0.5rem;
@@ -112,11 +112,8 @@
       cursor: pointer;
       border-radius: 4px;
     }
-    .delete-booking:hover { background: #a00; }
-
-    /* make sure the calendar is visible */
-    #calendar {
-      min-height: 600px;
+    .delete-booking:hover {
+      background: #a00;
     }
   </style>
 </head>
@@ -193,8 +190,20 @@
         </label>
       </div>
 
+      <div class="form-row">
+        <label>
+          Book As:
+          <input
+            type="text"
+            id="booking-as"
+            placeholder="e.g. Summer Camp Program"
+            required
+          />
+        </label>
+      </div>
+
       <button id="bookVehicleBtn" class="action-button">
-        Book Vehicle As…
+        Book Vehicle
       </button>
     </form>
 
@@ -203,7 +212,6 @@
         <h1 id="vehicle-schedule-heading"></h1>
         <div id="calendar"></div>
       </div>
-
       <div class="details-section">
         <div id="selected-date-info">
           <h3>Selected Date: <span id="selected-date-text"></span></h3>
@@ -213,7 +221,10 @@
     </div>
   </div>
 
-  <script type="module" defer>
+  <!-- FullCalendar JS -->
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.9.0/main.min.js"></script>
+
+  <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
     import { getAuth, onAuthStateChanged, signOut }
       from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
@@ -221,7 +232,7 @@
       getDatabase, ref, get, push, set, remove
     } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
 
-    // ── Firebase config ───────────────────────────────────────────────────
+    // ── Firebase config ─────────────────────────────────────────────────────
     const firebaseConfig = {
       apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
       authDomain: "yfned-fleet-nfc.firebaseapp.com",
@@ -232,27 +243,31 @@
       appId: "1:482363667898:web:4b0364e891a221e9631983"
     };
 
-    const app         = initializeApp(firebaseConfig);
-    const auth        = getAuth(app);
-    const db          = getDatabase(app);
-    let currentUser   = null;
-    let calendar      = null;
-    let lastClickedEl = null;
+    const app       = initializeApp(firebaseConfig);
+    const auth      = getAuth(app);
+    const db        = getDatabase(app);
+    let currentUser = null, calendar = null;
 
     // DOM refs
     const logoutBtn             = document.getElementById('logout-btn');
     const vehicleSelect         = document.getElementById('vehicle-select');
-    const vehicleHeading        = document.getElementById('vehicle-schedule-heading');
     const bookingStartDateInput = document.getElementById('booking-start-date');
     const bookingEndDateInput   = document.getElementById('booking-end-date');
     const bookingStartTimeInput = document.getElementById('booking-start-time');
     const bookingEndTimeInput   = document.getElementById('booking-end-time');
+    const bookingAsInput        = document.getElementById('booking-as');
     const bookVehicleBtn        = document.getElementById('bookVehicleBtn');
+    const vehicleHeading        = document.getElementById('vehicle-schedule-heading');
     const selectedDateTextEl    = document.getElementById('selected-date-text');
     const dateBookingsListEl    = document.getElementById('date-bookings-list');
+    let lastClickedDayEl        = null;
 
-    document.addEventListener('DOMContentLoaded', () => {
-      // init timepickers
+    onAuthStateChanged(auth, user => {
+      if (!user) return window.location.href = 'index.html';
+      currentUser = user;
+      logoutBtn.style.display = 'inline-block';
+
+      // init timepicker
       $('#booking-start-time, #booking-end-time').timepicker({
         timeFormat: 'h:mm p',
         interval: 30,
@@ -263,37 +278,27 @@
         scrollbar: true
       });
 
-      // auth hook
-      onAuthStateChanged(auth, user => {
-        if (!user) return window.location.href = 'index.html';
-        currentUser = user;
-        logoutBtn.style.display = 'inline-block';
+      initCalendar();
+      updateVehicleHeading(vehicleSelect.value);
 
-        initCalendar();
-        updateVehicleHeading(vehicleSelect.value);
-
-        vehicleSelect.addEventListener('change', async () => {
-          await updateVehicleHeading(vehicleSelect.value);
-          calendar.refetchEvents();
-        });
-
-        bookVehicleBtn.addEventListener('click', e => {
-          e.preventDefault();
-          handleMultiDayBooking();
-        });
-
-        logoutBtn.addEventListener('click', () => signOut(auth));
+      vehicleSelect.addEventListener('change', async () => {
+        await updateVehicleHeading(vehicleSelect.value);
+        calendar.refetchEvents();
       });
+
+      bookVehicleBtn.addEventListener('click', async e => {
+        e.preventDefault();
+        await handleMultiDayBooking();
+      });
+
+      logoutBtn.addEventListener('click', () => signOut(auth));
     });
 
     async function updateVehicleHeading(name) {
       const snap = await get(ref(db, 'vehicles/' + name));
-      if (snap.exists() && snap.val().status === 'signedOut') {
-        vehicleHeading.textContent =
-          `${name} schedule: Signed Out by ${snap.val().CurrentlySignedOutBy}`;
-      } else {
-        vehicleHeading.textContent = `${name} schedule: Available`;
-      }
+      vehicleHeading.textContent = snap.exists() && snap.val().status === 'signedOut'
+        ? `${name} schedule: Signed Out by ${snap.val().keyHeldBy || 'N/A'}`
+        : `${name} schedule: Available`;
     }
 
     function initCalendar() {
@@ -301,18 +306,16 @@
         document.getElementById('calendar'),
         {
           initialView: 'dayGridMonth',
-          displayEventTime: false,
+          timeZone: 'local',
           events: fetchVehicleBookings,
+          displayEventTime: false,
           dateClick: info => {
-            if (lastClickedEl) lastClickedEl.style.backgroundColor = '';
+            if (lastClickedDayEl) lastClickedDayEl.style.backgroundColor = '';
             info.dayEl.style.backgroundColor = 'lightblue';
-            lastClickedEl = info.dayEl;
+            lastClickedDayEl = info.dayEl;
 
             selectedDateTextEl.textContent = info.dateStr;
-            displayBookingsForDay(
-              getEventsForDate(info.date),
-              info.dateStr
-            );
+            displayBookingsForDay(getEventsForDate(info.date), info.dateStr);
             bookingStartDateInput.value = info.dateStr;
           }
         }
@@ -324,102 +327,126 @@
       const vehicle = vehicleSelect.value;
       const snap = await get(ref(db, 'bookings/' + vehicle));
       if (!snap.exists()) return success([]);
-      const evs = Object.entries(snap.val()).map(([id,b]) => ({
-        id,
-        title: `${b.startTime}-${b.endTime}`,
-        start: new Date(b.startTimeISO),
-        end:   new Date(b.endTimeISO),
-      }));
+      const evs = Object.entries(snap.val()).map(
+        ([id, b]) => ({
+          id,
+          title: `${b.startTime}–${b.endTime}`,
+          start: new Date(b.startTimeISO),
+          end:   new Date(b.endTimeISO),
+          extendedProps: { creator: b.userName }
+        })
+      );
       success(evs);
     }
 
     function getEventsForDate(date) {
-      const start = new Date(date).setHours(0,0,0,0);
-      const end   = new Date(start); end.setDate(end.getDate()+1);
-      return calendar.getEvents()
-        .filter(ev => ev.start < end && ev.end > start);
+      const startMs = new Date(date).setHours(0,0,0,0);
+      const endMs   = new Date(startMs);
+      endMs.setDate(endMs.getDate()+1);
+      return calendar.getEvents().filter(ev => ev.start < endMs && ev.end > startMs);
     }
 
     function displayBookingsForDay(events, dateStr) {
       if (!events.length) {
-        dateBookingsListEl.textContent = 'No bookings on ' + dateStr + '.';
+        dateBookingsListEl.textContent = `No bookings on ${dateStr}.`;
         return;
       }
       dateBookingsListEl.innerHTML = events.map(ev => `
-        <div style="margin-bottom:.5rem;">
-          <strong>${ev.title}</strong><br>
+        <div style="margin-bottom:.5rem">
+          <strong>${ev.extendedProps.creator}</strong><br>
           ${ev.start.toLocaleTimeString()} – ${ev.end.toLocaleTimeString()}
         </div>
       `).join('');
     }
 
     function toTimestamp(dateStr, timeStr) {
-      let [Y,M,D] = dateStr.split('-').map(Number),
-          [t,mod] = timeStr.split(' '),
-          [h,m]   = t.split(':').map(Number);
+      const [Y,M,D] = dateStr.split('-').map(Number);
+      let [t,mod]   = timeStr.split(' ');
+      let [h,m]     = t.split(':').map(Number);
       if (mod==='PM' && h!==12) h+=12;
       if (mod==='AM' && h===12) h=0;
       return new Date(Y,M-1,D,h,m).getTime();
     }
 
-    async function isBookingOverlapping(vehicle, s,e) {
+    async function isBookingOverlapping(vehicle,newStart,newEnd) {
       const snap = await get(ref(db,'bookings/'+vehicle));
       if (!snap.exists()) return false;
-      return Object.values(snap.val()).some(b=>{
-        const bs = new Date(b.startTimeISO).getTime(),
-              be = new Date(b.endTimeISO).getTime();
-        return s<be && e>bs;
+      return Object.values(snap.val()).some(b => {
+        const s = new Date(b.startTimeISO).getTime();
+        const e = new Date(b.endTimeISO).getTime();
+        return newStart < e && newEnd > s;
       });
     }
 
+    // allow weekends + free‐form “Book As”
     async function handleMultiDayBooking() {
       const vehicle = vehicleSelect.value;
-      const asUser  = prompt('Book vehicle as (username/email):');
-      if (!asUser) return alert('Booking cancelled.');
+      if (!vehicle) {
+        alert('No vehicle selected.');
+        return;
+      }
+      const asUser = bookingAsInput.value.trim();
+      if (!asUser) {
+        alert('Please enter who you’re booking as.');
+        return;
+      }
 
-      const startVal = bookingStartDateInput.value;
-      const endVal   = bookingEndDateInput.value || startVal;
-      const sT       = bookingStartTimeInput.value;
-      const eT       = bookingEndTimeInput.value;
-      if (!startVal||!sT||!eT) return alert('Provide both dates & times.');
+      const startVal   = bookingStartDateInput.value;
+      const endVal     = bookingEndDateInput.value || startVal;
+      const startT     = bookingStartTimeInput.value;
+      const endT       = bookingEndTimeInput.value;
 
-      let [y1,m1,d1] = startVal.split('-').map(Number),
-          [y2,m2,d2] = endVal.split('-').map(Number),
-          cur = new Date(y1,m1-1,d1),
-          last= new Date(y2,m2-1,d2),
-          toCreate = [];
+      if (!startVal || !startT || !endT) {
+        alert('Please provide dates and times.');
+        return;
+      }
 
-      if (cur>last) return alert('Start date cannot be after end date.');
+      const [y1,m1,d1] = startVal.split('-').map(Number);
+      const [y2,m2,d2] = endVal.split('-').map(Number);
 
-      while(cur<=last) {
-        const Y  = cur.getFullYear(),
-              Mo = String(cur.getMonth()+1).padStart(2,'0'),
-              Da = String(cur.getDate()).padStart(2,'0'),
-              ds = `${Y}-${Mo}-${Da}`,
-              sTS = toTimestamp(ds,sT),
-              eTS = toTimestamp(ds,eT);
+      let cur  = new Date(y1,m1-1,d1);
+      const last = new Date(y2,m2-1,d2);
+      const toCreate = [];
 
-        if (eTS<=sTS) {
-          return alert(`End time must be after start time on ${ds}.`);
+      if (cur > last) {
+        alert('Start date cannot be after end date.');
+        return;
+      }
+
+      while (cur <= last) {
+        const Y = cur.getFullYear();
+        const Mo = String(cur.getMonth()+1).padStart(2,'0');
+        const Da = String(cur.getDate()).padStart(2,'0');
+        const dateStr = `${Y}-${Mo}-${Da}`;
+
+        const startTS = toTimestamp(dateStr, startT);
+        const endTS   = toTimestamp(dateStr, endT);
+
+        if (endTS <= startTS) {
+          alert(`End time must be after start time on ${dateStr}.`);
+          return;
         }
-        if (await isBookingOverlapping(vehicle,sTS,eTS)) {
-          return alert(`Conflict on ${ds}. Aborting.`);
+        if (await isBookingOverlapping(vehicle,startTS,endTS)) {
+          alert(`Conflict on ${dateStr}. Booking aborted.`);
+          return;
         }
+
         toCreate.push({
-          userName: asUser,
-          date: ds,
-          startTime: sT,
-          endTime: eT,
-          startTimeISO: new Date(sTS).toISOString(),
-          endTimeISO: new Date(eTS).toISOString()
+          userName:     asUser,
+          date:         dateStr,
+          startTime:    startT,
+          endTime:      endT,
+          startTimeISO: new Date(startTS).toISOString(),
+          endTimeISO:   new Date(endTS).toISOString()
         });
+
         cur.setDate(cur.getDate()+1);
       }
 
-      for(const b of toCreate) {
+      for (const b of toCreate) {
         await set(push(ref(db,'bookings/'+vehicle)), b);
       }
-      alert(`Booked as ${asUser}!`);
+      alert(`Booked ${vehicle} as ${asUser}!`);
       calendar.refetchEvents();
     }
   </script>
